# ProtaVision

./: .copier-answers.yml  LICENSE  README.md  pyproject.toml  setup.py  tox.ini
data/: aminoacids.txt
docs/source/: conf.py  index.md
docs/source/api/: modules.rst  protavision.rst
notebooks/: Untitled.ipynb  aminoacids.ipynb  aurelie.ipynb  project_report.ipynb  projectwholecode.ipynb  run_code.ipynb  run_code_all.ipynb
src/protavision/: __init__.py  changes.py  function_main.py  functions.py
tests/: test.py  test_example_module.py  test_functions.py
